--- a/configs/milkv_mars_defconfig
+++ b/configs/milkv_mars_defconfig
@@ -4,14 +4,14 @@ CONFIG_NR_DRAM_BANKS=1
 CONFIG_ENV_SIZE=0x10000
 CONFIG_ENV_OFFSET=0xF0000
 CONFIG_SPL_DM_SPI=y
-CONFIG_DEFAULT_DEVICE_TREE="starfive_visionfive2"
+CONFIG_DEFAULT_DEVICE_TREE="jh7110_milkv_mars"
 CONFIG_SPL_MMC_SUPPORT=y
 CONFIG_SPL_DRIVERS_MISC=y
 CONFIG_SPL=y
 CONFIG_SPL_SPI_FLASH_SUPPORT=y
 CONFIG_SPL_SPI_SUPPORT=y
 CONFIG_BUILD_TARGET=""
-CONFIG_TARGET_MILKV_MARS=y
+CONFIG_TARGET_STARFIVE_VISIONFIVE2=y
 CONFIG_SPL_OPENSBI_LOAD_ADDR=0x40000000
 CONFIG_NR_CPUS=5
 CONFIG_FPGA_GMAC_SPEED_AUTO=y
