Change device tree back to starfive_visionfive2 and modify starfive_visionfive2.dts

--- a/arch/riscv/dts/starfive_visionfive2.dts
+++ b/arch/riscv/dts/starfive_visionfive2.dts
@@ -11,7 +11,7 @@
 / {
 	#address-cells = <2>;
 	#size-cells = <2>;
-	model = "StarFive VisionFive V2";
+	model = "Milk-V Mars";
 	compatible = "starfive,jh7110";
 
 	aliases {
