--- a/configs/milkv_mars_defconfig
+++ b/configs/milkv_mars_defconfig
@@ -4,7 +4,7 @@ CONFIG_NR_DRAM_BANKS=1
 CONFIG_ENV_SIZE=0x10000
 CONFIG_ENV_OFFSET=0xF0000
 CONFIG_SPL_DM_SPI=y
-CONFIG_DEFAULT_DEVICE_TREE="jh7110_milkv_mars"
+CONFIG_DEFAULT_DEVICE_TREE="starfive_visionfive2"
 CONFIG_SPL_MMC_SUPPORT=y
 CONFIG_SPL_DRIVERS_MISC=y
 CONFIG_SPL=y
@@ -22,7 +22,7 @@ CONFIG_RISCV_SMODE=y
 CONFIG_SHOW_REGS=y
 # CONFIG_ANDROID_BOOT_IMAGE is not set
 CONFIG_FIT=y
-CONFIG_SPL_FIT_SOURCE="jh7110-milkv-mars.its"
+CONFIG_SPL_FIT_SOURCE="jh7110-uboot-fit-image.its"
 CONFIG_SUPPORT_RAW_INITRD=y
 CONFIG_QSPI_BOOT=y
 CONFIG_SD_BOOT=y
